--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     
   </div>
   <div class="section">
-    <h2>Любі друзі!</h2>
+    <h2>Тьотя Маруся та Павло!</h2>
     <p>
       Незабаром у нашому житті відбудеться важлива подія — наше весілля.<br />
       Ми будемо щасливі побачити вас серед наших найдорожчих гостей<br />
